# SimColony

./: .gitignore  CMakeLists.txt  imgui.ini  vcpkg.json
content/config/: tiles.json
content/shaders/: IsometricTile.frag  IsometricTile.vert  Sprite.frag  Tile.frag  Tile.vert
src/: main.cpp
src/engine/: Core.hpp  Window.cpp  Window.hpp
src/engine/core/: Renderer.cpp  Renderer.hpp  ResourceCache.cpp  ResourceCache.hpp
src/engine/ecs/: Component.hpp  Entity.hpp  World.hpp
src/engine/ecs/components/: RenderableComponent.hpp  TileComponent.hpp  TransformComponent.hpp
src/engine/ecs/systems/: InteractionSystem.hpp  RenderSystem.hpp  SelectionSystem.hpp  SerializationSystem.hpp  TileEditSystem.hpp  TileSystem.hpp
src/engine/rendering/: Camera.cpp  Camera.hpp  IsometricTile.cpp  IsometricTile.hpp  RenderableTile.cpp  RenderableTile.hpp  Shader.cpp  Shader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  Texture.cpp  Texture.hpp  Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp
src/engine/rendering/shaders/: Sprite.vert  Tile.frag  Tile.vert
src/game/: Tile.hpp
src/game/world/: BiomeType.hpp  ExtendedTileComponent.hpp  LocalMapGenerator.cpp  LocalMapGenerator.hpp  TileProperties.hpp  TileRegistry.cpp  TileRegistry.hpp  WorldMap.cpp  WorldMap.hpp
